# fOS-WB

./: .gitignore  Cargo.toml  README.md
chat-server/: .gitignore  Cargo.toml  build.rs
chat-server/proto/: chat.proto
chat-server/src/: actor.rs  handler.rs  main.rs
chat-server/wasm-client/: Cargo.toml  build.rs
chat-server/wasm-client/src/: lib.rs
config/: vpn_regions.json  vpn_regions.toml
crates/fos-js/: Cargo.toml
crates/fos-js/src/: config.rs  context.rs  engine_flags.rs  gc.rs  heap.rs  lib.rs
crates/fos-memory/: Cargo.toml
crates/fos-memory/src/: ghost.rs  heap.rs  hibernation.rs  lib.rs  rss_monitor.rs  stats.rs
crates/fos-network/: Cargo.toml
crates/fos-network/src/: bloom_filter.rs  client.rs  dns.rs  filter_list.rs  interceptor.rs  lib.rs
crates/fos-render/: Cargo.toml
crates/fos-render/src/: chrome.rs  color.rs  gpu.rs  lib.rs  shapes.rs  surface.rs  text.rs  text_render.rs  vpn_picker.rs
crates/fos-render/src/shaders/: shape.wgsl  text.wgsl
crates/fos-tabs/: Cargo.toml
crates/fos-tabs/src/: lib.rs  message.rs  runtime.rs  tab.rs  watchdog.rs  worker.rs
crates/fos-ui/: Cargo.toml
crates/fos-ui/src/: adblocker.rs  lib.rs  shell.rs  webview.rs
crates/fos-vpn/: Cargo.toml
crates/fos-vpn/src/: config.rs  keys.rs  kill_switch.rs  lib.rs  manager.rs  proxy.rs  region.rs  tunnel.rs
crates/fos-wb/: Cargo.toml
crates/fos-wb/src/: main.rs
file-backend/: .gitignore  Cargo.toml
file-backend/.cargo/: config.toml
file-backend/src/: auth.rs  handlers.rs  main.rs  storage.rs  thumbnail.rs
web-browser/: .gitignore  Cargo.toml
web-browser/.cargo/: config.toml
web-browser/src/: bridge.rs  filter.rs  main.rs  protocol.rs
