[workspace]
resolver = "2"
members = [
    "crates/fos-wb",
    "crates/fos-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["fOS Team"]
license = "GPL-3.0"
repository = "https://github.com/fos/fos-wb"

[workspace.dependencies]
# Memory allocator
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
