[package]
name = "web-browser"
version = "0.1.0"
edition = "2021"
description = "Ultra-lightweight web browser core"
authors = ["Javier"]

[dependencies]
# Window handling - minimal features
tao = { version = "0.30", default-features = false, features = ["rwh_06"] }
# WebView engine - with custom protocol support
wry = { version = "0.47", default-features = false, features = ["os-webview", "protocol"] }
# Fast multi-pattern matching (zero-allocation during search)
aho-corasick = "1.1"
# Lazy static initialization
once_cell = "1.19"

[profile.release]
# Fat LTO for maximum size reduction
lto = "fat"
# Single codegen unit for better optimization
codegen-units = 1
# Abort on panic - eliminates unwinding code
panic = 'abort'
# Strip all symbols from binary
strip = "symbols"
# Optimize for size
opt-level = 'z'

[profile.dev]
# Faster compile times in development
opt-level = 0
