[package]
name = "fos-js"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true

# Note: In a real implementation, you would add:
# mozjs = "0.14"  # SpiderMonkey bindings
# or
# v8 = "0.74"     # V8 bindings
#
# For this implementation, we provide the configuration
# abstraction layer without the actual engine bindings.
