[package]
name = "fos-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
url.workspace = true
bloomfilter.workspace = true
xxhash-rust.workspace = true
hickory-resolver.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
