[package]
name = "fos-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wgpu.workspace = true
raw-window-handle.workspace = true
bytemuck.workspace = true
fontdue.workspace = true
glam.workspace = true
winit.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
pollster = "0.4"
