[package]
name = "fos-tabs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fos-memory = { path = "../fos-memory" }

crossbeam-channel.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
