[package]
name = "fos-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core browser - GTK4 + WebKitGTK6
gtk4 = "0.9"
webkit6 = "0.4"

# Logging and errors
tracing.workspace = true
anyhow.workspace = true

# Session persistence
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Adblocker (Brave's engine)
adblock = "0.8"
reqwest = { version = "0.12", features = ["blocking"] }
