[package]
name = "fos-vpn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Serialization (for config)
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# Cryptography for WireGuard
# Note: boringtun is Cloudflare's userspace WireGuard implementation
# In production: boringtun = "0.6"
# For this implementation, we provide the abstraction layer

# X25519 key exchange
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# ChaCha20-Poly1305 AEAD
chacha20poly1305 = "0.10"

# BLAKE2s for key derivation
blake2 = "0.10"

# Base64 for key encoding
base64 = "0.22"

# Random number generation
rand = "0.8"
