[package]
name = "fos-wb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "fos-wb"
path = "src/main.rs"

[dependencies]
fos-ui = { path = "../fos-ui" }

mimalloc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
